Some more documentation

--- a/DevSavant.ipynb
+++ b/DevSavant.ipynb
@@ -49,29 +49,32 @@
     "    file = \"playerlist.json\"\n",
     "    data = json.load(open(file))\n",
     "    values = data['values']\n",
-    "\n",
+    "    \n",
+    "#Data Transformation\n",
     "    full_names = [' '.join([dict_['first_name'], dict_['last_name']]) for dict_ in values]\n",
     "    heights_in = [int(dict_['h_in']) for dict_ in values]\n",
-    "\n",
+    "    \n",
+    "# Create triangular matrix with all possible sums of pair of heights\n",
     "    mtx_heights = np.array(np.zeros((len(heights_in), len(heights_in))))\n",
     "    for i, h in enumerate(heights_in):\n",
     "        for j, h_ in enumerate(heights_in):\n",
     "            mtx_heights[i,j] = h + h_\n",
     "\n",
     "    mtx_heights = np.triu(mtx_heights)\n",
-    "\n",
+    "    \n",
+    "# delete data and values to release some memorr space\n",
     "    del data\n",
     "    del values\n",
-    "\n",
+    "# find indeces where the target height is met\n",
+    "# comprise the pairs of players in tuples inside a list\n",
     "    indeces = np.argwhere(mtx_heights == target_height)\n",
-    "\n",
     "    players = [(full_names[i], full_names[i_]) for i, i_ in indeces if i != i_]\n",
     "    \n",
     "    return players\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    target_height = 139\n",
-    "    [print(pair) for pair in app(target_height)]\n",
+    "    target_height = 139 # default value, Change here for another target height\n",
+    "    [print(pair) for pair in app(target_height)] # print results \n",
     "    \n",
     "    "
    ]
