--- a/DevSavant.ipynb
+++ b/DevSavant.ipynb
@@ -50,7 +50,7 @@
     "    data = json.load(open(file))\n",
     "    values = data['values']\n",
     "    \n",
-    "#Data Transformation\n",
+    "# Data Transformation\n",
     "    full_names = [' '.join([dict_['first_name'], dict_['last_name']]) for dict_ in values]\n",
     "    heights_in = [int(dict_['h_in']) for dict_ in values]\n",
     "    \n",
@@ -62,9 +62,10 @@
     "\n",
     "    mtx_heights = np.triu(mtx_heights)\n",
     "    \n",
-    "# delete data and values to release some memorr space\n",
+    "# delete data and values to release some memory space\n",
     "    del data\n",
     "    del values\n",
+    "    \n",
     "# find indeces where the target height is met\n",
     "# comprise the pairs of players in tuples inside a list\n",
     "    indeces = np.argwhere(mtx_heights == target_height)\n",
@@ -85,7 +86,9 @@
    "id": "75367a55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for _ in range(len)"
+   ]
   },
   {
    "cell_type": "code",
