"no matches" action added

--- a/DevSavant.ipynb
+++ b/DevSavant.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "97971896",
    "metadata": {},
    "outputs": [
@@ -54,13 +54,21 @@
     "    full_names = [' '.join([dict_['first_name'], dict_['last_name']]) for dict_ in values]\n",
     "    heights_in = [int(dict_['h_in']) for dict_ in values]\n",
     "    \n",
-    "# Create triangular matrix with all possible sums of pair of heights\n",
+    "# Create triangular matrix with all possible sums of pair of heights: Original\n",
     "    mtx_heights = np.array(np.zeros((len(heights_in), len(heights_in))))\n",
     "    for i, h in enumerate(heights_in):\n",
     "        for j, h_ in enumerate(heights_in):\n",
     "            mtx_heights[i,j] = h + h_\n",
     "\n",
     "    mtx_heights = np.triu(mtx_heights)\n",
+    "    \n",
+    "# # Create triangular matrix with all possible sums of pairs of heights: refactored \n",
+    "# #  ************************ in progress; faster but not properly structured\n",
+    "#     mtx_heights = []\n",
+    "#     for i in range(len(heights_in)):\n",
+    "#         n_h = heights_in[i:] + heights_in[:i]\n",
+    "#         mtx_heights.append(np.add(heights_in, n_h))\n",
+    "#     mtx_heights = np.array(mtx_heights)\n",
     "    \n",
     "# delete data and values to release some memory space\n",
     "    del data\n",
@@ -71,7 +79,8 @@
     "    indeces = np.argwhere(mtx_heights == target_height)\n",
     "    players = [(full_names[i], full_names[i_]) for i, i_ in indeces if i != i_]\n",
     "    \n",
-    "    return players\n",
+    "    if players: return players\n",
+    "    else: return [\"No matches\"]\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    target_height = 139 # default value, Change here for another target height\n",
@@ -83,15 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75367a55",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3148aa6",
+   "id": "2464417f",
    "metadata": {},
    "outputs": [],
    "source": []
