--- a/Match-Players.ipynb
+++ b/Match-Players.ipynb
@@ -5,7 +5,12 @@
    "id": "7b324052",
    "metadata": {},
    "source": [
-    "# Python Assessment\n",
+    "# Python Exercise\n",
+    "\n",
+    "## Read a database from a JSON file containing players' info. These information is Name, Lastname, height in meters and height in inches. \n",
+    "## Write a function with a target height (integer) as an input that will find the pair(s) of players whose summed heights in inches matches the given target height. \n",
+    "\n",
+    "## Try it on you own. I share my solution in the next cells. \n",
     "\n",
     "## Running the following cell will generate a ```app.py``` file which can be executed from console by running ```python app.py``` once the workdirectory is placed where the file is and the evironment ```DevSavant``` is set and active. \n",
     "\n",
@@ -36,7 +41,7 @@
     "    '''\n",
     "        app function: load and tranform a JSON file with players full name\n",
     "        and height in, both, inches and meters; and find which pairs of players'\n",
-    "        heights match a target height. \n",
+    "        heights' sum matches a target height. \n",
     "        \n",
     "        ex. \n",
     "            app(139) \n",
@@ -92,7 +97,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2464417f",
+   "id": "17d78d88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3b39ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0150ab2",
    "metadata": {},
    "outputs": [],
    "source": []
